fixed menu not showing

--- a/Cyber-Punk.user.styl
+++ b/Cyber-Punk.user.styl
@@ -126,8 +126,8 @@ body {
     border-radius: 3px;
     color: var(--colors-tertiary--500);
     padding: 0.75rem;
-    -webkit-clip-path: var(--ui-notch-path);
-    clip-path: var(--ui-notch-path);
+   /* -webkit-clip-path: var(--ui-notch-path);
+    clip-path: var(--ui-notch-path); */
     position: relative;
 }
 .oab4agdp:before {
@@ -140,7 +140,7 @@ body {
     right: -6px;
     top: auto;
     transform: rotate(-45deg);
-    width: var(--ui-notch-hypotenuse);
+   /* width: var(--ui-notch-hypotenuse); */
     z-index: 100;
 }
 .n3t5jt4f {
